# --------wtf

./: pyproject.toml
statick/: styles.css
templates/: home.html  reviews.html
