[tool.poetry]
name = "піцерія wtf"
version = "0.1.0"
description = ""
authors = ["Soloway-1 <poppmikola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
